# codex-skills

./: .gitignore  AGENTS.md  README.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.agents/skills/: README.md
.agents/skills/monorepo_placeholder_skill/: SKILL.md
.agents/skills/monorepo_placeholder_skill/agents/: openai.yaml
.agents/skills/prepare_web_gpt_handoff/: SKILL.md
.agents/skills/prepare_web_gpt_handoff/agents/: openai.yaml
.agents/skills/prepare_web_gpt_handoff/config/: defaults.yaml
.agents/skills/prepare_web_gpt_handoff/schemas/: final_reply.schema.md  manifest.schema.json
.agents/skills/prepare_web_gpt_handoff/scripts/: _bootstrap.py  common.py  config_paths.py  confirm_handoff.py  prepare_handoff.py  render_preview.py  selection.py  token_tools.py  workflow.py
.agents/skills/prepare_web_gpt_handoff/templates/: notes.template.md
.agents/skills/prepare_web_gpt_handoff/tests/: test_entrypoints.py  test_manifest.py  test_paths.py  test_preview.py  test_repo_assets.py
.codex/skills/prepare_web_gpt_handoff/: SKILL.md
.codex/skills/prepare_web_gpt_handoff/config/: defaults.yaml
.codex/skills/prepare_web_gpt_handoff/schemas/: manifest.schema.json
.codex/skills/prepare_web_gpt_handoff/scripts/: common.py  confirm_handoff.py  prepare_handoff.py  render_preview.py
.codex/skills/prepare_web_gpt_handoff/templates/: brief.template.md  notes.template.md  reply_template.md
.codex/skills/prepare_web_gpt_handoff/tests/: test_manifest.py  test_paths.py  test_preview.py
.codex/skills/prepare_web_gpt_handoff/tests/fixtures/sample_project/: README.md
.github/workflows/: python-tests.yml
codex_skills_shared/: __init__.py  repo_paths.py  token_runtime.py
docs/architecture/: skills_monorepo.md
docs/research/contract_snippet_selection/: design_principles.md  implementation_plan.md  research_summary.md
docs/skills/: monorepo_placeholder_skill.md  prepare_web_gpt_handoff.md
examples/sample_project/: DEMO.md  README.md
examples/sample_project/.codex/handoffs/2026-04-06_192657_为_sample_project_准备网页版_gpt_研究交接包/: brief.md  bundle.md  manifest.json  notes.md  preview.json  reply_template.md
examples/sample_project/.codex/handoffs/2026-04-06_192657_为_sample_project_准备网页版_gpt_研究交接包/attachments/: README.md
examples/sample_project/docs/: overview.md  research_questions.md
examples/sample_project/handoffs/: 2026-04-08_231715_为_sample_project_准备网页版_gpt_研究交接包.md  LATEST.md
examples/sample_project/handoffs/2026-04-08_000423_为_sample_project_准备网页版_gpt_研究交接包/: brief.md  manifest.json  notes.md  preview.json  reply_template.md
examples/sample_project/handoffs/2026-04-08_000423_为_sample_project_准备网页版_gpt_研究交接包/attachments/: README.md
examples/sample_project/handoffs/2026-04-08_000423_为_sample_project_准备网页版_gpt_研究交接包/attachments/src/: workflow.py
examples/sample_project/handoffs/2026-04-08_000423_为_sample_project_准备网页版_gpt_研究交接包/attachments/templates/: reply_template.md
examples/sample_project/handoffs/2026-04-08_231715_为_sample_project_准备网页版_gpt_研究交接包/: bundle.md  manifest.json  notes.md  preview.json  reply_template.md
examples/sample_project/handoffs/2026-04-08_231715_为_sample_project_准备网页版_gpt_研究交接包/attachments/schemas/: manifest.schema.json
handoffs/: README.md
prepare_web_gpt_handoff/: __init__.py  config_paths.py  confirm.py  prepare.py  preview.py  selection.py  token_tools.py  workflow.py
(+8 files in other folders)
