[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-skills-workspace"
version = "0.2.0"
description = "A zero-install-first monorepo for multiple repo-scoped Codex skills."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Codex" }]
license = { file = "LICENSE" }
keywords = ["codex", "skills", "monorepo", "handoff", "web-gpt", "research"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
exact-tokens = ["tiktoken>=0.7"]

[project.scripts]
prepare-web-gpt-handoff-prepare = "prepare_web_gpt_handoff.prepare:main"
prepare-web-gpt-handoff-preview = "prepare_web_gpt_handoff.preview:main"
prepare-web-gpt-handoff-confirm = "prepare_web_gpt_handoff.confirm:main"

[tool.setuptools]
packages = ["prepare_web_gpt_handoff", "codex_skills_shared"]
